fix overflow on note item

--- a/app/assets/stylesheets/components/notes.scss
+++ b/app/assets/stylesheets/components/notes.scss
@@ -48,7 +48,9 @@
   }
 
   p {
-    margin-top: 5px;
+    margin: 5px 0; 
+    height: 58px;
+    overflow: hidden;
   }
 }
 
